--- a/src/app/features/products/components/variant-options-values-quantity/variant-options-values-quantity.component.html
+++ b/src/app/features/products/components/variant-options-values-quantity/variant-options-values-quantity.component.html
@@ -55,8 +55,7 @@
   </div>
 </div> -->
 
-
-<div class="py-3 border-top">
+<div class="py-3 border-top" *ngIf="displayedVariants.length > 0">
   <div class="accordion" id="accordionExample">
       <div class="accordion-item" *ngFor="let variant of displayedVariants ; let rowIndex=index;">
         <h2 class="accordion-header">
@@ -68,7 +67,7 @@
             [attr.aria-expanded]="rowIndex === 0 ? 'true' : 'false'"
             [attr.aria-controls]="'collapse' + rowIndex + variant.name">
             <div class="d-flex w-100 align-items-center justify-content-between">
-              <div class="d-flex align-items-center small">
+                <!-- <div class="d-flex align-items-center small">
                 <span><i class="fa-solid fa-square-plus pe-1"></i></span>
                 <div class="d-flex align-utems-center">
                   <ng-container *ngFor="let key of getFullVariantName(variant) ;let last=last;">
@@ -89,7 +88,14 @@
 
                   </ng-container>
                 </div>
+              </div> -->
+              <div class="d-flex align-items-center small">
+                <span><i class="fa-solid fa-square-plus pe-1"></i></span>
+                <div class="d-flex align-utems-center">
+                  <span>{{isRtl()?variant.nameAr:variant.nameEn}}</span>
+                </div>
               </div>
+
               <span class="fs-verySmall">{{'Available No' | translate}}: {{variant.quantity}}</span>
             </div>
           </button>
