--- a/src/app/features/products/components/variant-value-details/variant-value-details.component.html
+++ b/src/app/features/products/components/variant-value-details/variant-value-details.component.html
@@ -1,4 +1,4 @@
-<div class="row g-2">
+<!-- <div class="row g-2">
   <div class="col-lg-4">
           <app-input
              (input)="recalculate()"
@@ -206,4 +206,71 @@
           </div>
         </div>
        </div>
+</div> -->
+
+
+<div class="row g-2">
+  <ng-container *ngFor="let field of inputFields">
+    <div [ngClass]="field.col">
+      <app-input
+        (input)="field.triggerRecalc ? recalculate() : null"
+        [InputComponentData]="{
+          type: 'text',
+          id: field.id,
+          label: field.label || '',
+          spanLabel: field.spanLabel || '',
+          placeholder: field.placeholder,
+          vertCLass: 'col-12',
+          readonly: false,
+          hideLabel: true,
+          inputGroup: field.inputGroup,
+          clickMessage: '',
+          errorMessage: '',
+          enableFocusBlurTracking: false
+        }"
+        #inputRef
+      >
+        <i class="fa-solid" [ngClass]="field.icon"></i>
+      </app-input>
+    </div>
+  </ng-container>
+
+  <div class="col-lg-6">
+    <app-dropdown
+      [DropdownComponentData]="{
+        title: 'charge Tax',
+        dropdownSelection: chargeTaxDropDownSelection,
+        optionsArray: ChargeTax,
+        key: 'title',
+        noBorder: false
+      }"
+      (changeSelect)="changeSelect($event, 'chargeTax')"
+    ></app-dropdown>
+  </div>
+
+  <div class="col-lg-6">
+    <app-dropdown
+      [DropdownComponentData]="{
+        title: 'Price Affecting',
+        dropdownSelection: priceAffecringDropDownSelection,
+        optionsArray: PriceAffecting,
+        key: 'title',
+        noBorder: false
+      }"
+      (changeSelect)="changeSelect($event, 'isPriceAffecting')"
+    ></app-dropdown>
+  </div>
+
+  <div class="col-12">
+    <div class="pt-2 pb-1">
+      <h6 class="pb-1 border-bottom small">{{ 'Quantity' | translate }}</h6>
+      <div class="d-flex align-items-center justify-content-between">
+        <span class="small">{{ 'Product Quantity' | translate }}</span>
+        <app-quantity-control
+          [quantity]="VariantValueDetailsComponentData.quantity"
+          (quantityChange)="updateQuantity($event)"
+        ></app-quantity-control>
+      </div>
+    </div>
+  </div>
 </div>
