--- a/src/app/features/products/components/variants/variants.component.html
+++ b/src/app/features/products/components/variants/variants.component.html
@@ -24,26 +24,26 @@
                    <span *ngFor="let value of variant.values; let last = last" [class.me-2]="!last">
                         <ng-container *ngIf="variant.name !== 'color'; else coloredVariant">
                           <span class="px-3 variantValuebg py-1 text-white fw-light fs-verySmall rounded-3 d-inline-block">
-                            {{ value | translate | titlecase}}
+                            {{ value.value | translate | titlecase}}
                           </span>
                         </ng-container>
                             <ng-template #coloredVariant>
                               <span class="variantValuebg rounded-3 d-inline-block"
                                     [ngStyle]="{
-                                      'background-color': value,
+                                      'background-color': value.value,
                                       'width': '36px',
                                       'height': '20px',
                                       'display': 'inline-block'
                                     }"
-                                    [title]="value">
+                                    [title]="value.value">
                               </span>
                             </ng-template>
                           </span>
                   </div>
                  </div>
-                 <div>
+                 <!-- <div>
                         <span (click)="deleteVariant(index)"><i class="fa-solid fa-trash-can text-semi-dark"></i></span>
-                 </div>
+                 </div> -->
             </div>
            </div>
             <div class="d-flex align-items-center py-2 px-3 border border-top-0 rounded-bottom-3" (click)="showOptionsSection()" *ngIf="!displayVariant()">
@@ -53,17 +53,17 @@
           </div>
         </div>
         <div *ngIf="displayVariant()" class="border p-3 rounded-3">
-            <app-add-variant (variants)="setProductVariants($event)"
+            <app-add-variant
+            (localVariants)="setLocalVariants($event)"
             ></app-add-variant>
+            <!-- <div class="fs-verySmall p-1 bg-semi-dark text-white rounded-2 text-center p-2 mt-2" (click)="createProductVariants()">Create Product Variants</div> -->
         </div>
-        <div class="variantValuesQuantityContainer mt-3" *ngIf="localVariants().length > 0">
-                     <app-variant-options-values-quantity
-                     [variantOptionsData]="{
-                      variants:localVariants(),
-                      variantsDetails:variantsDetails
-                     }"
-                    (variantDetailsHandled)="variantDetailsHandledFn()">
-                   </app-variant-options-values-quantity>
+        <!-- <div class="variantValuesQuantityContainer mt-3" *ngIf="localVariants().length > 0"> -->
+          <div class="variantValuesQuantityContainer mt-3">
+                   <app-variant-options-values-quantity
+                   [localVariants]="localVariants()"
+                  (variantDetailsHandled)="variantDetailsHandledFn($event)">
+                 </app-variant-options-values-quantity>
 
         </div>
 
