move add-in-custpmer to customer modu;e and do require changes

--- a/src/app/features/customers/add-in-voice-new-customer/add-in-voice-new-customer.component.html
+++ b/src/app/features/customers/add-in-voice-new-customer/add-in-voice-new-customer.component.html
@@ -1,6 +1,6 @@
  <app-pop-screen
  [PopScreenComponentData]="{
-      headerLabel:'Add Customer',
+      headerLabel:CompoenentData.header,
       btnLabel:'Done',
       hideCancalBtn:true
     }"
@@ -33,7 +33,7 @@
   <div class="col-lg-4">
     <app-dropdown
     [DropdownComponentData]="{
-          title:'Active',
+          title:'Customer Type',
           dropdownSelection:customerTypeSelection,
           optionsArray:customerTypes,
           key:'title',
@@ -59,7 +59,7 @@
 </div>
 </div>
 </app-pop-screen>
-   
+
 
 
 
