--- a/src/app/features/orders/orders.component.html
+++ b/src/app/features/orders/orders.component.html
@@ -6,7 +6,7 @@
           route: 'Orders/create',
           type: 'order',
           items: orders(),
-          sortKey: 'grossTotal'
+          sortKey: 'totalBeforeTax'
         }"
         (displayedItems)="handleDispalyedItems($event)"
         (deleteEvent)="handleDelete($event)">
