--- a/src/app/components/sideNavComponents/sidenav/sidenav.component.html
+++ b/src/app/components/sideNavComponents/sidenav/sidenav.component.html
@@ -1,48 +1,65 @@
-<div class="sidebar  p-2 d-flex flex-column" [class.collapsed]="isCollapsed" #sideNav>
-   <app-navitem  [NavitemComponentData]="{
-              isCollapsed:isCollapsed,
-                navItemName:'Shopping',
-                classes:'mb-3  px-3 logo px-2 py-3'
-              }"
-    (click)="toggleSidebar()" class="flex-grow-0"   #logo >
-   <img src="assets/images/Logo.png" alt="Logo Image" width="20px;"/>
+<div class="sidebar p-2 d-flex flex-column" [class.collapsed]="isCollapsed" #sideNav>
+  <!-- Logo -->
+  <app-navitem
+    [NavitemComponentData]="{
+      isCollapsed: isCollapsed,
+      navItemName: 'Shopping',
+      classes: 'mb-3 px-3 logo px-2 py-2'
+    }"
+    (click)="toggleSidebar()"
+    class="flex-grow-0"
+    #logo
+  >
+    <img src="assets/images/Logo.png" alt="Logo Image" width="20px;" />
   </app-navitem>
- <div class="flex-grow-1 d-flex flex-column overflow-auto  navOptions" [class.pt-4]="smallScreen">
-   <div class="sidenav-section-one pb-3">
-   <ul  *ngFor="let navItem of sectionOneNavItems;">
-    <li>
-           <app-navitem  [NavitemComponentData]="{
-              isCollapsed:isCollapsed,
-                navItemName:navItem.name,
-                classes:'py-2'
-              }">
-             <i [ngClass]="navItem.icon"></i>
-        </app-navitem>
-    </li>
-  </ul>
- </div>
-  <div class="sidenav-section pt-3 d-flex flex-column justify-content-between flex-grow-1" >
-  <div >
-   <ul  *ngFor="let navItem of sectionTwoNavItems;">
-    <li >
-           <app-navitem  [NavitemComponentData]="{
-                isCollapsed:isCollapsed,
-                navItemName:navItem.name,
-                classes:'py-2'
-              }" >
-             <i [ngClass]="navItem.icon"></i>
-        </app-navitem>
-    </li>
-  </ul>
+
+  <!-- Navigation Sections -->
+  <div class="flex-grow-1 d-flex flex-column overflow-auto navOptions" [class.pt-4]="smallScreen">
+    <!-- Section One -->
+    <div class="sidenav-section-one pb-3">
+      <ul>
+        <li *ngFor="let navItem of sectionOneNavItems">
+          <app-navitem
+            [NavitemComponentData]="{
+              isCollapsed: isCollapsed,
+              navItemName: navItem.name,
+              classes: 'py-2 small',
+              subItems: navItem.subItems
+            }"
+          >
+            <i [ngClass]="navItem.icon"></i>
+          </app-navitem>
+        </li>
+      </ul>
+    </div>
+
+    <!-- Section Two -->
+    <div class="sidenav-section pt-3 d-flex flex-column justify-content-between flex-grow-1">
+      <div>
+        <ul>
+          <li *ngFor="let navItem of sectionTwoNavItems">
+            <app-navitem
+              [NavitemComponentData]="{
+                isCollapsed: isCollapsed,
+                navItemName: navItem.name,
+                classes: 'py-2 small',
+                subItems: navItem.subItems
+              }"
+            >
+              <i [ngClass]="navItem.icon"></i>
+            </app-navitem>
+          </li>
+        </ul>
+      </div>
+
+      <!-- Sales Person -->
+      <app-nav-sales-person
+        [NavSalesPersonComponent]="{
+          isCollapsed: isCollapsed,
+          personImage: personImage,
+          salesPersonName: salesPersonName
+        }"
+      ></app-nav-sales-person>
+    </div>
   </div>
-  <app-nav-sales-person [NavSalesPersonComponent]="
-        {
-        isCollapsed:isCollapsed,
-        personImage:personImage,
-        salesPersonName:salesPersonName
-      }"
-    >
-</app-nav-sales-person>
- </div>
- </div>
 </div>
