--- a/src/app/features/products/categories/categories.component.html
+++ b/src/app/features/products/categories/categories.component.html
@@ -1,1 +1,30 @@
-<p>categories works!</p>
+<div class="h-100 w-100">
+  <app-layout
+  [LayoutComponentDate]="{
+    route: '',
+    items: categories(),
+    sortKey: 'isActive',
+    header: 'Add New Category',
+    subTitle: 'Every category, clearly crafted — so finding the right product feels effortless.',
+    btnName: 'Add New Category',
+    columns: [],
+    serviceType: '',
+  }"
+  (addNewVar)="addNew($event)"
+  (deleteSelected)="deleteSelected($event)" >
+
+        <div class="row gy-3">
+          <div class="col-12 col-md-6 col-xl-4 col-xxl-3" *ngFor="let category of categories(); let i = index">
+              <app-category-card [category]="category" (editCategory)="getEditCategoryInfo($event)"></app-category-card>
+          </div>
+        </div>
+  </app-layout>
+  </div>
+
+  <app-category *ngIf="addCategory()" (createdCategory)="closeCreate($event)"></app-category>
+  <app-category  *ngIf="editCategory()"  [CompoenentData]="{
+    header:'Edit Category',
+    category:category}"
+   (createdCategory)="closeEdit($event)"></app-category>
+
+
