change page controls layout and update dependent component

--- a/src/app/features/customers/customers.component.html
+++ b/src/app/features/customers/customers.component.html
@@ -8,9 +8,10 @@
     subTitle: 'Every customer. Every moment. Every time — we deliver more than expected.',
     btnName: 'Add New Customer',
     columns: [],
-    serviceType: '',
+    serviceType: 'customer',
+    servicesList:servicesList
   }"
-  (addNewVar)="addNew($event)"
+(addNewVar)="addNew($event)"
   (deleteSelected)="deleteSelected($event)" >
 
         <div class="row gy-3">
