--- a/src/app/features/products/categories/categories.component.html
+++ b/src/app/features/products/categories/categories.component.html
@@ -8,7 +8,8 @@
     subTitle: 'Every category, clearly crafted — so finding the right product feels effortless.',
     btnName: 'Add New Category',
     columns: [],
-    serviceType: '',
+    serviceType: 'category',
+    servicesList:servicesList
   }"
   (addNewVar)="addNew($event)"
   (deleteSelected)="deleteSelected($event)" >
