--- a/src/app/features/products/variants-library/variants-library.component.html
+++ b/src/app/features/products/variants-library/variants-library.component.html
@@ -8,7 +8,8 @@
   subTitle: 'Start by stocking your store with products your customers will love',
   btnName: 'Add New Variant',
   columns: [],
-  serviceType: '',
+  serviceType: 'variant',
+  servicesList:servicesList
 }"
 (addNewVar)="showOptionsSection()"
 (deleteSelected)="deleteSelected($event)" >
