--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -1,3 +1,30 @@
 .products {
   min-height: 0;
 }
+
+
+.filter-sidenav {
+  position: fixed;
+  top: 0;
+  right: -350px; /* Hidden by default */
+  width: 350px;
+  height: 100%;
+  background: #fff;
+  box-shadow: -2px 0 8px rgba(0, 0, 0, 0.1);
+  transition: right 0.3s ease-in-out;
+  z-index: 1051000;
+}
+
+.filter-sidenav.show {
+  right: 0;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 1050;
+}
