implement layout header for search and update layout

--- a/src/app/features/customers/customers.component.html
+++ b/src/app/features/customers/customers.component.html
@@ -9,7 +9,9 @@
     btnName: 'Add New Customer',
     columns: [],
     serviceType: 'customer',
-    servicesList:servicesList
+    servicesList:servicesList,
+    page:'Customers'
+
   }"
 (addNewVar)="addNew($event)"
   (deleteSelected)="deleteSelected($event)" >
