--- a/src/app/features/orders/orders.component.html
+++ b/src/app/features/orders/orders.component.html
@@ -9,7 +9,8 @@
     btnName: 'Add New Order',
     columns: [],
     serviceType: 'order',
-    servicesList:servicesList
+    servicesList:servicesList,
+    page:'Orders'
   }"
   (addNewVar)="addNew($event)"
   (deleteSelected)="deleteSelected($event)" >
