--- a/src/app/features/products/categories/categories.component.html
+++ b/src/app/features/products/categories/categories.component.html
@@ -9,7 +9,8 @@
     btnName: 'Add New Category',
     columns: [],
     serviceType: 'category',
-    servicesList:servicesList
+    servicesList:servicesList,
+    page:'Categories'
   }"
   (addNewVar)="addNew($event)"
   (deleteSelected)="deleteSelected($event)" >
