--- a/src/app/features/products/products.component.html
+++ b/src/app/features/products/products.component.html
@@ -9,7 +9,8 @@
   btnName: 'Add New Product',
   columns: [],
   serviceType: 'product',
-  servicesList:servicesList
+  servicesList:servicesList,
+  page:'Products'
 }"
 [close]="closeFilter"
 (resetFilter)="resetFilter()"
