--- a/src/app/features/products/variants-library/variants-library.component.html
+++ b/src/app/features/products/variants-library/variants-library.component.html
@@ -9,7 +9,8 @@
   btnName: 'Add New Variant',
   columns: [],
   serviceType: 'variant',
-  servicesList:servicesList
+  servicesList:servicesList,
+  page:'Variants'
 }"
 (addNewVar)="showOptionsSection()"
 (deleteSelected)="deleteSelected($event)" >
