--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -1,5 +1,8 @@
 <div class="container-fluid p-4 vh-100 overflow-auto d-flex flex-column">
   <div class="row flex-column flex-grow-1">
+    <div class="col-12">
+      <app-layout-header [page]="LayoutComponentDate.page"></app-layout-header>
+    </div>
     <!-- <div class="col-12 bg-semi-dark py-2 px-3 rounded-top-3 border-bottom"> -->
     <div class="col-12  py-2 px-3 rounded-top-3 border-bottom">
      <app-page-controls
