--- a/src/app/features/customers/customer-card/customer-card.component.scss
+++ b/src/app/features/customers/customer-card/customer-card.component.scss
@@ -2,10 +2,28 @@
   height: 60px;
 }
 .customerImage{
-  width:30%;
+  width:25%;
   left:50%;
   top:50%;
   transform: translateX(-50%) translateY(-50%);
-
 }
 
+
+@media (min-width: 576px) {
+  .customerImage {
+    width: 16%;
+  }
+}
+
+
+@media (min-width: 768px) {
+  .customerImage {
+    width: 30%;
+  }
+}
+
+@media (min-width: 992px) {
+  .customerImage {
+    width: 25%;
+  }
+}
